-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
LFSCK read-only reports these errors after migration:
00100000:10000000:26.0F:1764155361.227119:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6d4:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227122:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6d4:0x0] of the striped directory [0x2404f5b4a:0x4ea:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0 00100000:10000000:26.0:1764155361.227129:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6d5:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227135:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6d5:0x0] of the striped directory [0x2404f5b4a:0x4ed:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0 00100000:10000000:26.0:1764155361.227148:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6d7:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227150:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6d7:0x0] of the striped directory [0x2404f5b4a:0x4ef:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0 00100000:10000000:26.0:1764155361.227161:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6d8:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227163:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6d8:0x0] of the striped directory [0x2404f5b4a:0x4f1:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0 00100000:10000000:26.0:1764155361.227175:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6da:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227176:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6da:0x0] of the striped directory [0x2404f5b4a:0x4f3:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0 00100000:10000000:26.0:1764155361.227188:0:469923:0:(lfsck_striped_dir.c:1117:lfsck_namespace_update_lmv()) kjcf05-MDT0001-osd: namespace LFSCK updated the slave LMV EA for the object [0x2404f5b49:0x6db:0x0]: rc = 0 00100000:10000000:26.0:1764155361.227190:0:469923:0:(lfsck_striped_dir.c:2243:lfsck_namespace_striped_dir_rescan()) kjcf05-MDT0001-osd: namespace LFSCK repair the shard 0 [0x2404f5b49:0x6db:0x0] of the striped directory [0x2404f5b4a:0x4f4:0x0 ] with dangling no/no, rename no/no, llinkea no/no, repair_lmvea yes/yes: rc = 0