LU-19645 lod: update slave lmv on dir shrink

The lmv_master_mdt_index in slave LVM is used for
stipe's index, but there are few places where
the field is not updated or updated incorrectly.

HPE-bug-id: LUS-13134
Fixes: b2eef3dd2f0 ("LU-11025 dne: change dir layout via dt_layout_change")
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: I3804201a8f5c085d15ea1abe1022614c191cd8e9
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62771
Reviewed-by: Andriy Skulysh <andriy.skulysh@hpe.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>